force-app/main/default/objects/Energy_Audit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Energy Audit (取引先)</relationshipLabel>
    <relationshipName>Energy_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>