force-app/main/default/objects/Energy_Audit__c/fields/Annual_Energy_Usage_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_Energy_Usage_kWh__c</fullName>
    <inlineHelpText>Usage per square foot. (平方フィートあたりの使用量。)</inlineHelpText>
    <label>Annual Energy Usage_kWh</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>