force-app/main/default/objects/Energy_Audit__c/fields/torihikisaki__c.field-meta.xml
<CustomField>
    <fullName>torihikisaki__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Energy Audit</relationshipLabel>
    <relationshipName>Energy_torihikisaki</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>