force-app/main/default/objects/Energy_Audit__c/fields/Type_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Installation__c</fullName>
    <label>Type of Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rooftop (屋根)</fullName>
                <default>true</default>
                <label>Rooftop (屋根)</label>
            </value>
            <value>
                <fullName>Carport (駐車スペース)</fullName>
            </value>
            <value>
                <fullName>Ground mounted (地上)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>